--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -39,8 +39,8 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Armenian: {{t|hy|հետ տալ}}, {{t+|hy|փսխել}}, {{t|hy|ործկալ}}
 * Aromanian: {{t|rup|vomu}}
 * Asturian: {{t|ast|vomitar}}
-* Belarusian: {{t|be|ванітава́ць|impf|sc=Cyrl}}, {{t|be|блява́ць|impf|sc=Cyrl}}, {{t|be|рваць|impf|sc=Cyrl}} {{qualifier|impersonal}}
-* Bulgarian: {{t+|bg|повръ̀щам|impf|sc=Cyrl}}, {{t+|bg|бълва̀м|impf|sc=Cyrl}}, {{t|be|рыга́ць|impf|sc=Cyrl}}
+* Belarusian: {{t|be|ванітава́ць|impf|sc=Cyrl}}, {{t|be|блява́ць|impf|sc=Cyrl}}, {{t|be|рваць|impf|sc=Cyrl}} {{qualifier|impersonal}}, {{t|be|рыга́ць|impf|sc=Cyrl}}
+* Bulgarian: {{t+|bg|повръ̀щам|impf|sc=Cyrl}}, {{t+|bg|бълва̀м|impf|sc=Cyrl}}
 * Burmese: {{t+|my|အန်|sc=Mymr}}
 * Catalan: {{t+|ca|vomitar}}
 * Chinese:
