--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -34,11 +34,13 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 ====Translations====
 {{trans-top|to regurgitate the contents of a stomach}}
 * Afrikaans: {{t|af|braak}}
+* Albanian: {{t+|sq|vjell}}
 * American Sign Language: {{t|ase|5@Mouth-5@FromUlnarTipFinger 5@FromMouth-5@FromUlnarTipFinger}}
 * Arabic: {{t|ar|تقيأ|tr=taqayyaʾa|sc=Arab}}, {{t|ar|قاء|tr=qāʾa|sc=Arab}}, {{t|ar|استفرغ|tr=istafraġa|sc=Arab}}
 * Armenian: {{t|hy|հետ տալ}}, {{t+|hy|փսխել}}, {{t|hy|ործկալ}}
 * Aromanian: {{t|rup|vomu}}
 * Asturian: {{t|ast|vomitar}}
+* Azeri: {{t+|az|qusmaq}}
 * Belarusian: {{t|be|ванітава́ць|impf|sc=Cyrl}}, {{t|be|блява́ць|impf|sc=Cyrl}}, {{t|be|рваць|impf|sc=Cyrl}} {{qualifier|impersonal}}, {{t|be|рыга́ць|impf|sc=Cyrl}}
 * Bulgarian: {{t+|bg|повръ̀щам|impf|sc=Cyrl}}, {{t+|bg|бълва̀м|impf|sc=Cyrl}}
 * Burmese: {{t+|my|အန်|sc=Mymr}}
@@ -54,19 +56,23 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Finnish: {{t+|fi|oksentaa}}
 * French: {{t+|fr|vomir}}, {{t+|fr|rendre}}, {{t+|fr|rejeter}}, {{t+|fr|dégobiller}} {{qualifier|colloquial}}, {{t+|fr|dégueuler}} {{qualifier|slang}}, {{t+|fr|gerber}} {{qualifier|slang}}, {{t+|fr|quicher}} {{qualifier|slang}}
 * Galician: {{t+|gl|vomitar}}
+* Georgian: {{t+|ka|ღებინება|sc=Geor}}
 * German: {{t+|de|übergeben|alt=sich übergeben}}, {{t+|de|erbrechen}}, {{t+|de|kotzen}}, {{t+|de|vomieren}}
 * Greek: {{t+|el|εξεμώ}}, {{t|el|[[κάνω]] [[εμετό]]}}, {{t+|el|ξερνώ}} {{qualifier|colloquial}}
 *: Ancient: {{t|grc|ἐμέω|sc=polytonic}}, {{t|grc|ἐξεμέω|sc=polytonic}}
 * Hebrew: {{t|he|הקיא|tr=hekí}}
 * Hindi: {{t|hi|उल्टी करना|tr=ulṭī karnā|sc=Deva}}, {{t|hi|वमन करना|tr=vaman karnā|sc=Deva}}
 * Hungarian: {{t+|hu|hány}}
+* Icelandic: {{t+|is|æla}}, {{t|is|gubba}}, {{t|is|spúa}}, {{t+|is|spýja}}, {{t|is|kasta upp}}
 * Irish: {{t|ga|aisig}}
 *: Old Irish: {{t|sga|sceid|alt=sceïd}}
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
 * Japanese: {{t+|ja|吐く|tr=[[はく]], haku|sc=Jpan}}, {{t+|ja|嘔吐|tr=おうとする, ōto suru|alt=嘔吐する|sc=Jpan}}, {{t|ja|戻す|tr=もどす, modosu|sc=Jpan}}
+* Karelian: {{t|krl|oksendua}}
 * Khmer: {{t+|km|ក្អួត|tr=k’uət|sc=Khmr}}
 * Korean: {{t+|ko|게우다|sc=Kore}}
 {{trans-mid}}
+* Lao: {{t|lo|ອາຈຽນ|sc=Laoo}}, {{t|lo|ສຳຮາກ|sc=Laoo}}, {{t|lo|ອົ້ວະ|sc=Laoo}}, {{t|lo|ຮາກ|sc=Laoo}}, {{t|lo|ລົງຮາກ|sc=Laoo}}
 * Latin: {{t|la|vomō}}, {{t|la|vomitō}}
 * Latvian: {{t+|lv|vemt}}
 * Lithuanian: {{t+|lt|vemti}}
@@ -74,7 +80,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Malay: {{t|ms|muntah}}
 * Maltese: {{t|mt|irrimetta}}, {{t|mt|qala'}}
 * Maori: {{t|mi|ruaki}}
-* Mongolian: {{t-needed|mn}}
+* Mongolian: {{t+|mn|бөөлжис|sc=Cyrl}}
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t|no|brekke seg}}
 * Occitan: {{t|oc|vomir}}
 * Old Norse: {{t|non|spýja}}
@@ -96,6 +102,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Spanish: {{t+|es|vomitar}}, {{t+|es|devolver}}, {{t+|es|arrojar}}, {{t|es|echar la pota}}
 * Swahili: {{t|sw|kutapika}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}, {{t|sv|kasta upp}}
+* Tajik: {{t|tg|қай кардан|sc=Cyrl}}
 * Tamil: {{t+|ta|குமட்டு|sc=Taml}}, {{t|ta|உவட்டு|sc=Taml}}, {{t|ta|உவாந்தி|sc=Taml}}, {{t+|ta|வாந்தி|sc=Taml}}
 * Thai: {{t+|th|อาเจียน|tr=aa jian|sc=Thai}}, {{t|th|อ้วก|tr=ûak|sc=Thai}}
 * Turkish: {{t+|tr|kusmak}}
