t+id:[[memuntahkan]] t-balance t+id:[[muntah]] ([[WT:EDIT|Assisted]]) <vomit#29096926>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -64,14 +64,15 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Hindi: {{t|hi|उल्टी करना|tr=ulṭī karnā|sc=Deva}}, {{t|hi|वमन करना|tr=vaman karnā|sc=Deva}}
 * Hungarian: {{t+|hu|hány}}
 * Icelandic: {{t+|is|æla}}, {{t|is|gubba}}, {{t|is|spúa}}, {{t+|is|spýja}}, {{t|is|kasta upp}}
+* Indonesian: {{t+|id|memuntahkan}}, {{t+|id|muntah}}
 * Irish: {{t|ga|aisig}}
 *: Old Irish: {{t|sga|sceid|alt=sceïd}}
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
 * Japanese: {{t+|ja|吐く|tr=[[はく]], haku|sc=Jpan}}, {{t+|ja|嘔吐|tr=おうとする, ōto suru|alt=嘔吐する|sc=Jpan}}, {{t|ja|戻す|tr=もどす, modosu|sc=Jpan}}
 * Karelian: {{t|krl|oksendua}}
 * Khmer: {{t+|km|ក្អួត|tr=k’uət|sc=Khmr}}
-* Korean: {{t+|ko|게우다|sc=Kore}}
 {{trans-mid}}
+* Korean: {{t+|ko|게우다|sc=Kore}}
 * Lao: {{t|lo|ອາຈຽນ|sc=Laoo}}, {{t|lo|ສຳຮາກ|sc=Laoo}}, {{t|lo|ອົ້ວະ|sc=Laoo}}, {{t|lo|ຮາກ|sc=Laoo}}, {{t|lo|ລົງຮາກ|sc=Laoo}}
 * Latin: {{t|la|vomō}}, {{t|la|vomitō}}
 * Latvian: {{t+|lv|vemt}}
