t+uz:[[qusmoq]] t-balance t+tk:[[gusmak]] ([[WT:EDIT|Assisted]]) <vomit#29096928>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -71,9 +71,9 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Japanese: {{t+|ja|吐く|tr=[[はく]], haku|sc=Jpan}}, {{t+|ja|嘔吐|tr=おうとする, ōto suru|alt=嘔吐する|sc=Jpan}}, {{t|ja|戻す|tr=もどす, modosu|sc=Jpan}}
 * Karelian: {{t|krl|oksendua}}
 * Khmer: {{t+|km|ក្អួត|tr=k’uət|sc=Khmr}}
-{{trans-mid}}
 * Korean: {{t+|ko|게우다|sc=Kore}}
 * Lao: {{t|lo|ອາຈຽນ|sc=Laoo}}, {{t|lo|ສຳຮາກ|sc=Laoo}}, {{t|lo|ອົ້ວະ|sc=Laoo}}, {{t|lo|ຮາກ|sc=Laoo}}, {{t|lo|ລົງຮາກ|sc=Laoo}}
+{{trans-mid}}
 * Latin: {{t|la|vomō}}, {{t|la|vomitō}}
 * Latvian: {{t+|lv|vemt}}
 * Lithuanian: {{t+|lt|vemti}}
@@ -107,7 +107,9 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Tamil: {{t+|ta|குமட்டு|sc=Taml}}, {{t|ta|உவட்டு|sc=Taml}}, {{t|ta|உவாந்தி|sc=Taml}}, {{t+|ta|வாந்தி|sc=Taml}}
 * Thai: {{t+|th|อาเจียน|tr=aa jian|sc=Thai}}, {{t|th|อ้วก|tr=ûak|sc=Thai}}
 * Turkish: {{t+|tr|kusmak}}
+* Turkmen: {{t|tk|gusmak}}
 * Ukrainian: {{t+|uk|блюва́ти|impf|sc=Cyrl}}, {{t|uk|рва́ти|impf|sc=Cyrl}} {{qualifier|impersonal}}, {{t|uk|рига́ти|impf|sc=Cyrl}}
+* Uzbek: {{t+|uz|qusmoq}}
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
 {{trans-bottom}}
 
