--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -42,7 +42,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Asturian: {{t|ast|vomitar}}
 * Azeri: {{t+|az|qusmaq}}
 * Belarusian: {{t|be|ванітава́ць|impf|sc=Cyrl}}, {{t|be|блява́ць|impf|sc=Cyrl}}, {{t|be|рваць|impf|sc=Cyrl}} {{qualifier|impersonal}}, {{t|be|рыга́ць|impf|sc=Cyrl}}
-* Bulgarian: {{t+|bg|повръ̀щам|impf|sc=Cyrl}}, {{t+|bg|бълва̀м|impf|sc=Cyrl}}
+* Bulgarian: {{t+|bg|повръ̀щам|impf|sc=Cyrl}}, {{t+|bg|бълва́м|impf|sc=Cyrl}}
 * Burmese: {{t+|my|အန်|sc=Mymr}}
 * Catalan: {{t+|ca|vomitar}}
 * Chinese:
