--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -95,9 +95,9 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Romanian: {{t+|ro|vomita}}, {{t+|ro|borî}}, {{t+|ro|vărsa}}
 * Romansch: {{t|rm|vomitar}}
 * Russian: {{t+|ru|блева́ть|impf|sc=Cyrl}}, {{t+|ru|рвать|impf|sc=Cyrl}} {{qualifier|impersonal}}, {{t+|ru|тошни́ть|impf|sc=Cyrl}} {{qualifier|impersonal, to feel sick}}, {{t+|ru|рыга́ть|impf|sc=Cyrl}}
-* {{ttbc|sh}}:
-*: Cyrillic: {{t|sh|ригати|impf|sc=Cyrl}}, {{t|sh|збљувати|sc=Cyrl}}, {{t|sh|повратити|sc=Cyrl}}, {{t|sh|бљувати|impf|sc=Cyrl}}, {{t|sh|повраћати|sc=Cyrl}}
-*: Roman: {{t+|sh|rigati|impf}}, {{t|sh|zbljuvati}}, {{t+|sh|povratiti}}, {{t+|sh|bljuvati|impf}}, {{t+|sh|povraćati}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|ригати|impf|sc=Cyrl}}, {{t|sh|збљувати|pf|sc=Cyrl}}, {{t|sh|повратити|pf|sc=Cyrl}}, {{t|sh|бљувати|impf|sc=Cyrl}}, {{t|sh|повраћати|impf|sc=Cyrl}}
+*: Roman: {{t+|sh|rigati|impf}}, {{t|sh|zbljuvati|pf}}, {{t+|sh|povratiti|pf}}, {{t+|sh|bljuvati|impf}}, {{t+|sh|povraćati|impf}}
 * Slovak: {{t|sk|zvracať|impf}}
 * Slovene: {{t+|sl|bruhati|impf}}
 * Sorbian:
