--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -143,8 +143,9 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 * Catalan: {{t+|ca|Israel|m}}
 * French: {{t+|fr|Israël|m}}
 * Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
-{{trans-mid}}
 * Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
+{{trans-mid}}
+* Romanian: {{t+|ro|Israel|m}}
 * Spanish: {{t+|es|Israel|m}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
 {{trans-bottom}}
