t+de:[[externes Netzteil]] ([[WT:EDIT|Assisted]]) <brick#29098679>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -194,7 +194,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Czech: {{t+|cs|cihla|f}}
 * Dutch: {{t+|nl|koelkast|f}}
 * French: {{t-needed|fr}}
-* German: {{t-needed|de}}
+* German: {{t|de|externes Netzteil|n}}
 {{trans-mid}}
 * Hindi: {{t-needed|hi}}
 * Italian: {{t-needed|it}}
