--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -192,7 +192,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Chinese:
 *: Mandarin: {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Czech: {{t+|cs|cihla|f}}
-* Dutch: {{t+|nl|koelkast|f}}
+* Dutch: {{t+check|nl|koelkast|f}}
 * French: {{t-needed|fr}}
 * German: {{t|de|externes Netzteil|n}}
 {{trans-mid}}
