--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -253,7 +253,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 # To make into bricks.
 #* '''1904''' September 15, James C. Bennett, Walter Renton Ingalls (editor), ''Lead Smelting and Refining with Some Notes on Lead Mining'' (1906), The Engineering and Mining Journal, page 66
 #*: The plant, which is here described, for '''bricking''' fine ores and flue dust, was designed and the plans produced in the engineering department of the Selby smelter.
-# {{context|slang|lang=en}} To [[hit]] someone using a brick.
+# {{context|slang|lang=en}} To [[hit]] someone or something with a brick.
 # {{context|computing|_|slang|lang=en}} To make an [[electronic]] device nonfunctional and usually beyond repair, essentially making it no more useful than a brick.
 #: ''My VCR was '''bricked''' during the lightning storm''.
 #* '''2007''' December 14, Joe Barr, “PacketProtector turns SOHO router into security powerhouse”, ''Linux.com''
