Migrating [[Template:ttbc]] to [[Template:t-check]] <branch#29103739>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -232,7 +232,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Old English: {{t-check|ang|bog|alt=bōg|n}}
 * Portuguese: {{qualifier|2,4}} {{t-check|pt|ramo|m}}
 * Romanian: {{t-check|ro|ram|n}}, {{t-check|ro|ramură|f}}
-* {{ttbc|sh}}:
+* Serbo-Croatian:
 * Spanish {{t+check|es|ramo|m}}
 * Swahili: {{t-check|sw|tawi}}
 {{trans-bottom}}
