--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -26,6 +26,11 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=人10}}
 
+# [[superbness]]
+# [[superiority]]
+# [[primeness]]
+# [[of the highest quality]]
+
 ====Readings====
 * {{ja-readings|on=[[けつ]] (ketsu)|kun=[[すぐれる]] (sugureru)}}
 
