--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -12,7 +12,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 ====Verb====
 {{en-verb}}
 
-# {{context|intransitive|lang=en}} To [[enumerate]] the [[digit]]s of a [[numeral]] system.
+# {{context|intransitive|lang=en}} To [[recite]] [[numbers]] in [[sequence]].
 #: {{usex|lang=en|Can you '''count''' to a hundred?}}
 # {{context|transitive|lang=en}} To determine the [[number]] (of objects in a group).
 #: {{usex|lang=en|There are three apples; '''count''' them.}}
