/* Verb */ second usex, to show counting down and counting by <count#29110175>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -12,8 +12,8 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 ====Verb====
 {{en-verb}}
 
-# {{context|intransitive|lang=en}} To [[recite]] [[numbers]] in [[sequence]].
-#: {{usex|lang=en|Can you '''count''' to a hundred?}}
+# {{context|intransitive|lang=en}} To [[recite]] [[number]]s in [[sequence]].
+#: {{usex|lang=en|Can you '''count''' to a hundred?}} {{usex|lang=en|The psychiatrist asked her to '''count''' down from a hundred by sevens.}}
 # {{context|transitive|lang=en}} To determine the [[number]] (of objects in a group).
 #: {{usex|lang=en|There are three apples; '''count''' them.}}
 # {{context|intransitive|lang=en}} To be of [[significance]]; to [[matter]].
