--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -34,7 +34,7 @@
 
 ====Readings====
 {{ja-kanjitab|さか|yomi=k}}
-* {{ja-readings|on=[[はん]] (han)|kun=[[さか]] (saka)}}
+* {{ja-readings|kanon=[[はん]] (han)|kanyoon=[[ばん]] (ban)|kun=[[さか]] (saka)}}
 
 ===Noun===
 {{ja-noun|さか}} 
