added [[Category:CJKV characters simplified differently in Japan and China]] using [[Help:Gadget-HotCat|HotCat]] <显#29111396>

--- a/en/显/显.16999.wikitext
+++ b/en/显/显.16999.wikitext
@@ -32,6 +32,8 @@
 
 # {{defn|lang=cmn|sort=日05}}
 
+[[Category:CJKV characters simplified differently in Japan and China|顯2]]
+
 [[fr:显]]
 [[ko:显]]
 [[pl:显]]
