--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -27,7 +27,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
 
-# southwest
+# [[southwest]]
 
 ====Readings====
 * {{ja-readings|on=[[こん]] (kon)|kun=[[つち]] (tsuchi), [[ひつじさる]] (hitsujisaru)}}
