--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -135,6 +135,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Bavarian: {{t|bar|kemma}}
 * Belarusian: {{t|be|прыходзіць|impf|tr=pryxódzicʹ|sc=Cyrl}}, {{t|be|прыйсці|pf|sc=Cyrl}}, {{t|be|прыязджаць|impf|tr=pryjazdžácʹ|sc=Cyrl}}, {{t|be|прыехаць|pf|tr=pryjéxacʹ|sc=Cyrl}} {{qualifier|by transport}}
 * Bengali: {{t|bn|আসা|tr=asha|sc=Beng}}
+* Brahui: {{t|brh|barr}}
 * Bulgarian: {{t+|bg|идвам|impf|tr=ídvam}}, {{t|bg|дойда|pf|tr=dójda}}
 * Burmese: {{t+|my|လာ|tr=la|sc=Mymr}}
 * Catalan: {{t+|ca|venir}}
