t+ru:[[пригожий]] ([[WT:EDIT|Assisted]]) <beautiful#29126853>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -135,7 +135,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Punjabi: {{t|pa|ਸੁਹਣਾ|tr=suhṇā|m}}, {{t|pa|ਸੁਹਣੀ|tr=suhṇī|f}}
 * Romanian: {{t+|ro|frumos|m|n}}, {{t|ro|frumoasă|f}}
 * Romansch: {{t|rm|bel|m}}, {{t|rm|bella|f}}, {{t|rm|bi|m}}, {{t|rm|biala|f}}
-* Russian: {{t+|ru|красивый|tr=krasívyj}}, {{t+|ru|прекрасный|tr=prekrásnyj}}
+* Russian: {{t+|ru|красивый|tr=krasívyj}}, {{t+|ru|прекрасный|tr=prekrásnyj}}, {{t+|ru|приго́жий|sc=Cyrl}} {{qualifier|folklore, peotic}}
 * Sanskrit: {{t|sa|सुन्दर|tr=sundara|sc=Deva}}, {{t|sa|सुरूप|tr=surūpa|sc=Deva}}
 * Sardinian: {{t|sc|bedhu|m}}, {{t|sc|bedha|f}}, {{t|sc|bellu|m}}, {{t|sc|bella|f}}
 * Scottish Gaelic: {{t|gd|àlainn}}, {{t|gd|bòidheach}}, {{t|gd|brèagha}}, {{t|gd|fèilleil}}, {{t|gd|grinn}}, {{t|gd|maiseach}}, {{t|gd|rìomhach}}, {{t|gd|sgèimheach}}
