t+tg:[[хушрӯ]] ([[WT:EDIT|Assisted]]) <beautiful#29126959>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -154,7 +154,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Swahili: {{t+|sw|zuri}}
 * Swedish: {{t+|sv|fin}}, {{t+|sv|vacker}}
 * Tagalog: {{t+|tl|maganda}}
-* Tajik: {{t|tg|зебо||sc=Cyrl}}
+* Tajik: {{t|tg|зебо||sc=Cyrl}}, {{t|tg|хушрӯ|sc=Cyrl}}
 * Tamil: {{t+|ta|அழகிய}}
 * Tatar: {{t|tt|матур|sc=Cyrl}}, {{t|tt|гүзәл|sc=Cyrl}}
 * Telugu: {{t+|te|అందమైన}}
