t+uk:[[гарний]] ([[WT:EDIT|Assisted]]) <beautiful#29126985>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -162,7 +162,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Tswana: {{t|tn|-ntle}}
 * Turkish: {{t+|tr|güzel}}
 * Turkmen: {{t|tk|görmegeý}}, {{t|tk|gözel}}, {{t|tk|gelşikli}}
-* Ukrainian: {{t|uk|вродли́вий}}, {{t+|uk|краси́вий}}
+* Ukrainian: {{t|uk|вродли́вий}}, {{t+|uk|краси́вий}}, {{t+|uk|га́рний|sc=Cyrl}}
 * Urdu: {{t|ur|خوبصورت|tr=xūbsūrat}}, {{t|ur|سندر|tr=sundar}}
 * Uzbek: {{t+|uz|yoqimli}}, {{t+|uz|goʻzal}}
 * Venetian: {{t|vec|beło|m}}, {{t|vec|beła|f}}
