--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -82,7 +82,7 @@
 * Navajo: {{t|nv|chʼééh digháhii}}
 * Norwegian: {{t+|no|skilpadde}}, {{t+|no|skjelpadde}}, {{t|no|landskilpadde|f}}
 * Pali: {{t|pi|kacchapa|m}}
-* Persian: {{qualifier|tortoise or turtle}} {{t+|fa|لاک‌پشت|tr=lâk-pošt|sc=fa-Arab}}
+* Persian: {{qualifier|tortoise or turtle}} {{t+|fa|لاک‌پشت|tr=lâk-pošt|sc=fa-Arab}}, {{t+|fa|باخه|tr=bâxe|sc=fa-Arab}}
 * Polish: {{qualifier|tortoise or turtle}} {{t+|pl|żółw|m}}, {{t+|pl|żółw lądowy|m}}
 * Portuguese: {{qualifier|tortoise or turtle}} {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}, {{t+|pt|cágado}}
 * Romanian: {{t|ro|țestoasă|f}}, {{t|ro|broască țestoasă|f}}
