--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -88,7 +88,7 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 ====Usage notes====
 In its general sense, ''come'' specifically marks motion [[towards]] the [[w:Deixis|deictic centre]] (whether explicitly stated or not). Its counterpart, usually referring to motion away from or not involving the deictic centre, is ''[[go]]''. For example, the sentence "Come to the tree" implies contextually that the speaker is already at the tree - "Go to the tree" often implies that the speaker is elsewhere. Either the speaker or the listener can be the deictic centre - the sentences "I will go to you" and "I will come to you" are both valid, depending on the exact nuances of the context. When there is no clear speaker or listener, the deictic centre is usually the focus of the sentence or the topic of the piece of writing. "Millions of people '''came''' to America from Europe" would be used in an article about America, but "Millions of people '''went''' to America from Europe" would be used in an article about Europe.
 
-When used with adverbs of location, ''come'' is usually paired with ''[[here]]'', ''[[hence]]'' or ''[[hither]]'', while ''go'' is paired with ''[[there]]'', ''[[thence]]'' or ''[[thither]]''. In interrogatives, ''come'' usually indicates a question about source - "Where are you coming from?" - while ''go'' indicates a question about destination - "Where are you going?" or "Where are you going to?"
+When used with adverbs of location, ''come'' is usually paired with ''[[here]]'' or ''[[hither]]''. In interrogatives, ''come'' usually indicates a question about source - "Where are you coming from?" - while ''go'' indicates a question about destination - "Where are you going?" or "Where are you going to?"
 
 A few old texts use ''[[comen]]'' as the past participle.
 
