--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -108,6 +108,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Portuguese: {{t+|pt|flutuar}}, {{t+|pt|boiar}}
 * Russian: {{t|ru|[[держа́ться]] [[на]] [[вода|воде́]]}}
 * Spanish: {{t+|es|flotar}}
+* Swedish: {{t+|sv|flyta}}
 {{trans-bottom}}
 
 {{trans-top|to drift gently through the air}}
@@ -125,6 +126,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Portuguese: {{t+|pt|flutuar}}, {{t+|pt|pairar}}
 * Russian: {{t+|ru|пари́ть|impf}}, {{t+|ru|плыть|impf}}
 * Spanish: {{t+|es|flotar}}
+* Swedish: {{t+|sv|sväva}}
 {{trans-bottom}}
 
 {{trans-top|to move in a particular direction with the liquid in which one is floating}}
