--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -7,7 +7,7 @@ From {{etyl|la|en}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id 
 ===Pronunciation===
 * {{a|RP|US}} {{IPA|/ˌaɪˈiː/|lang=en}}
 * {{audio|en-us-i.e..ogg|Audio (US)|lang=en}}
-* It is sometimes pronounced as ''[[that is]]''.
+* It is usually pronounced as ''[[that is]]''.
 
 ===Abbreviation===
 {{head|en|abbreviation}}
@@ -16,8 +16,8 @@ From {{etyl|la|en}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id 
 #: ''The three U.S. states on the west coast have favorable climates ('''i.e.''', warm winters and cool summers ).''
 
 ====Usage notes====
-* '''i.e.''' is used to [[explain]], [[clarify]] or [[rephrase]] a statement rather than listing options, in which case '''[[e.g.]]''' should be used.
 * Often confused with '''[[e.g.]]'''
+* '''i.e.''' is used to [[explain]], [[clarify]] or [[rephrase]] a statement rather than listing options, in which case '''[[e.g.]]''' should be used.
 * American English prefers a comma after '''i.e.'''; in British English a comma does not follow '''i.e.''' [http://dictionary.reference.com/help/faq/language/g58.html]
 * Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in '''i.&nbsp;e.'''. However, the [[wikipedia:AMA Manual of Style|AMA manual of style]] recommends to forgo italic on terms long since naturalized into English and not to separate abbreviations (see [[wikipedia:Abbreviations|"Abbreviations" on Wikipedia]]).
 * '''ie:''' is often found in current usage, and is perhaps now considered acceptable.
@@ -37,7 +37,7 @@ i.e. differs from [[viz.]] in that what follows merely restates what was said in
 * Esperanto: {{t|eo|t.e.}}
 * Finnish: {{t+|fi|l.}}<!-- [[eli]] -->, {{t+|fi|ts.}}
 * French: {{t+|fr|c.-à-d.}}
-* German: {{t+|de|d. h.}}
+* German: {{t+|de|d. i.}} (pl. {{t+|de|d. s.}}), {{t+|de|d. h.}}
 * Greek: {{t+|el|δηλαδή|tr=diladí|sc=Grek}}
 * Hebrew: {{t|he|דהיינו|tr=deháinu}}, {{t|he|כלומר|tr=klomár}}, {{t|he|זאת אומרת|tr=zót oméret}}
 * Hungarian: {{t+|hu|azaz}}
