t+pl:[[przechwycać]] t+pl:[[przechwycić]] ([[WT:EDIT|Assisted]]) <catch#29144834>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -455,6 +455,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 {{trans-top|to handle a computer error, especially an exception {{jump|t|handle error}} }}
 * Finnish: {{t+|fi|siepata}}
 {{trans-mid}}
+* Polish: {{t|pl|przechwycać|impf}}, {{t|pl|przechwycić|pf}}
 * Portuguese: {{t+|pt|capturar}}
 {{trans-bottom}}
 
