Added another term <feel#29150400>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -71,26 +71,27 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|fēla
 
 =====Derived terms=====
 {{rel-top3|Terms derived from ''feel'' (verb)}}
-* [[feeler]]
-* [[feel around]]
-* [[feel down]]
-* [[feel for]]
-* [[feel free]]
-* [[feel-good]]
+* {{l/en|feel around}}
+* {{l/en|feel dense}}
+* {{l/en|feel down}}
+* {{l/en|feel for}}
+* {{l/en|feel free}}
+* {{l/en|feel in one's bones}}
+* {{l/en|feel like}}
 {{rel-mid3}}
-* [[feel in one's bones]]
-* [[feel like]]
-* [[feel one's oats]]
-* [[feel oneself]]
-* [[feel out]]
-* [[feel the heat]]
+* {{l/en|feel one's oats}}
+* {{l/en|feel oneself}}
+* {{l/en|feel out}}
+* {{l/en|feel the heat}}
+* {{l/en|feel the pinch}}
+* {{l/en|feel up to}}
+* {{l/en|feel up}}
 {{rel-mid3}}
-* [[feel the pinch]]
-* [[feel up]]
-* [[feel up to]]
-* [[feeling]]
-* [[feely]]
-* [[forefeel]]
+* {{l/en|feeler}}
+* {{l/en|feel-good}}
+* {{l/en|feeling}}
+* {{l/en|feely}}
+* {{l/en|forefeel}}
 {{rel-bottom}}
 
 =====Translations=====
