--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -47,7 +47,7 @@ It can't be used to link a noun and an adjective. The following sentence is wron
 : 这是好。
 The correct sentence is
 {{zh-usex|這 '''很''' 好|This '''is (very)''' good|in_notes=yes|link=y}}
-Here [[很]] is used as a filler, to link a noun and an adjective and is not interpreted as very. Not using it would sound unatural.
+Here [[很]] is used as a filler, to link a noun and an adjective and is not interpreted as very. Not using it would sound unnatural.
 A way to use 是 with an adjective is to use {{zh-l|的}} after the adjective to turn it into a noun.
 #: {{zh-usex|那 只 猫 '''是''' 黑 的|This cat is black (This cat is a black one)|in_notes=yes|link=y}}
 
