--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -163,6 +163,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 {{trans-mid}}
 * Japanese: {{t|ja|超える|tr=koeru}}
 * Jèrriais: {{t|roa-jer|fliotter}}
+* Swedish: {{t+|sv|flyta}}
 {{trans-bottom}}
 
 {{trans-top|to propose for consideration}}
