--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-(1520) From {{term|beauty|lang=en}} + {{term|-ful||full of|lang=en}}. Displaced earlier {{term|sheen|lang=en}} (from {{etyl|enm|-}} {{term|schene||beautiful|lang=enm}}, from {{etyl|ang|-}} {{m|ang|scīene||beautiful}}), {{etyl|enm|-}} {{term|wliti||beautiful|lang=enm}}, from {{etyl|ang|-}} {{m|ang|wlitiġ||beautiful}}.
+From {{etyl|enm|en}} {{m|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautiful}}, equivalent to {{suffix|beauty|ful|lang=en}}. Displaced earlier {{term|sheen|lang=en}} (from {{etyl|enm|-}} {{term|schene||beautiful|lang=enm}}, from {{etyl|ang|-}} {{m|ang|scīene||beautiful}}), {{etyl|enm|-}} {{term|wliti||beautiful|lang=enm}}, from {{etyl|ang|-}} {{m|ang|wlitiġ||beautiful}}.
 
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|[ˈbjuːtɪfəɫ]|lang=en}}
