--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -202,6 +202,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Malay: {{t+|ms|datang}}, {{t|ms|mari}}
 * Maltese: {{t|mt|gie}}
 * Manchu: {{t|mnc|jimbi|sc=Mong}}
+* Maore Comorian: {{t|swb|ja|alt=uja}}
 * Mongolian: {{t|mn|ирэх|tr=ireh|sc=Cyrl}}
 * Neapolitan: {{t|nap|venì}}
 * North Frisian: {{t|frr|kaame}}
