--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -71,7 +71,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * German: {{t+|de|errichten}}
 * Greek: {{t+|el|θεμελιώνω|sc=Grek}}
 * Italian: {{t+|it|fondare}}
-* Japanese: {{t|ja|定礎|alt=定礎する|tr=teiso suru}}
+* Japanese: {{t|ja|基礎|alt=基礎を築く|tr=kiso wo kizuku}}
 * Khmer: {{t+|km|បង្កើត|tr=bɑŋkaət|sc=Khmr}}
 * Korean: {{t-needed|ko}}
 * Norwegian: {{t|no|grunnlegge}}
