--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -540,14 +540,15 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 {{trans-bottom}}
 
 {{trans-top|individual's performance in a sport}}
+* Catalan: {{t+|ca|joc|m}}
 * Dutch: {{t|nl|spelbeweging|f}}
 * Finnish: {{t+|fi|peli}}
 * Hebrew: {{t+|he|משחק|m|tr=misḥāq}}
 * Hungarian: {{t+|hu|játék}}
 * Kurdish: {{t+|ku|yarî|f}}, {{t+|ku|lîstik|f}}
 * Macedonian: {{t|mk|игра|f|tr=ígra}}
-* Polish: {{t+|pl|gra|f}}
 {{trans-mid}}
+* Polish: {{t+|pl|gra|f}}
 * Russian: {{t+|ru|игра|f|tr=igrá}}
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: {{t+|es|juego|m}}
