--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -13,7 +13,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# A former country on the [[Balkan Peninsula]], made up of the now-independent nations of [[Serbia]] and [[Montenegro]], [[Macedonia]], [[Bosnia and Herzegovina]], [[Slovenia]], and [[Croatia]]; it disintegrated in the 1990s.
+# {{context|historical|1918&ndash;2000s|lang=en}} A former country on the [[Balkan Peninsula]], made up of the now-independent nations of [[Serbia]] and [[Montenegro]], [[Macedonia]], [[Bosnia and Herzegovina]], [[Slovenia]], and [[Croatia]]; it disintegrated in the 1990s.
 
 ====Translations====
 {{trans-top|former country in the Balkans}}
