--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -29,7 +29,7 @@
 # {{defn|lang=ja|sort=日05}}
 
 ====Readings====
-* {{ja-readings|on=[[えい]] (ei), [[よう]] (yō)|kun=[[はえる]] (haeru), [[うつる]] (utsuru), [[うつす]] (utsusu)}}
+* {{ja-readings|goon=[[よう]] (yō)|kanon=[[えい]] (ei)|kun=[[はえる]] (haeru), [[うつる]] (utsuru), [[うつす]] (utsusu)}}
 
 ====Compounds====
 * {{term|映画||[[movie]]|tr=えいが, eiga|lang=ja|sc=Jpan}}
