--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -51,6 +51,7 @@
 * Persian: {{t|fa|یوگسلاوی}}
 * Polish: {{t+|pl|Jugosławia|f}}
 * Portuguese: {{t+|pt|Jugoslávia|f}} ({{qualifier|Portugal}}), {{t+|pt|Iugoslávia|f}} ({{qualifier|Brazil}})
+* Romanian: {{t|ro|Iugoslavia|f}}
 * Russian: {{t+|ru|Югославия|f|tr=Jugoslávija}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Југо̀сла̄вија|f|sc=Cyrl}}, {{t|sh|Југосла̏вија|f|sc=Cyrl}}
