--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -225,8 +225,8 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * Korean: {{t+|ko|배|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|زگ|tr=zig|sc=ku-Arab}}, {{t|ku|ورگ|tr=wirg|sc=ku-Arab}}
-{{trans-mid}}
 * Kyrgyz: {{t|ky|карын|tr=qarın|sc=Cyrl}}
+{{trans-mid}}
 * Latgalian: {{t|ltg|vādars|m}}
 * Latvian: {{t+|lv|vēders|m}}
 * Lithuanian: {{t|lt|pilvas|m}}
@@ -262,6 +262,7 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * Urdu: {{t|ur|پیٹ|m|tr=pēṭ|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|bụng}}
 * Volapük: {{t+|vo|bälid}}
+* Welsh: {{t+|cy|bol|m}}
 * Yiddish: {{t|yi|בויך|m|tr=boykh|sc=Hebr}}
 * Zulu: {{t+|zu|isisu|c7|c8}}
 {{trans-bottom}}
