edit section 3.1.1 ([[WT:EDIT|Assisted]]) <偶#29303407>

--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -54,7 +54,7 @@
 {{ja-kanji|grade=c|rs=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[ぐう]] (gū), [[ごう]] (gō)|kun=[[たぐい]] (tagui), [[たまたま]] (tamatama)}}
+* {{ja-readings|goon=[[ぐ]] (gu)|kanon=[[ごう]] (gō)|kanyoon=[[ぐう]] (gū)|kun=[[たぐい]] (tagui), [[たまたま]] (tamatama)}}
 
 ====Compounds====
 {{top3}}
