edit section 5.1 ([[WT:EDIT|Assisted]]) <坐#29306250>

--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -65,11 +65,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''坐''' ([[tọa]], [[ngồi]], [[toà]], [[toạ]])
+{{vi-hantu|[[tọa]], [[ngồi]], [[toà]], [[toạ]]|rs=土04}}
 
 # {{defn|lang=vi}}
-
-[[Category:Vietnamese Han tu]]
 
 [[zh-min-nan:坐]]
 [[fr:坐]]
