--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -122,6 +122,7 @@ There are minor differences in where the last stroke of the top component (top-l
 * [[小春日和]] ([[こはるびより]], [[koharubiyori]]): [[early autumn]], [[Indian summer]]
 * [[常春]] ([[とこはる]], [[tokoharu]]): [[everlasting spring]]
 * [[初春]] ([[はつはる]], [[hatsuharu]], [[しょしゅん]], [[shoshun]]):  [[early spring]], [[New Year]]
+* [[春菊]] ([[しゅんぎく]], [[shungiku]]): [[garland chrysanthemum]]
 * [[春秋]] ([[しゅんじゅう]], [[shunshū]]): spring and autumn, months and years, Chronicles of Lu
 * [[春秋戦国]] ([[しゅんじゅうせんごく]], [[shunjuusengoku]]): [[Spring and Autumn Period]] and [[Warring States Period]] in China
 * [[春一番]] ([[はるいちばん]]: [[haruichiban]]): first storm of spring
