edit section 3.1.1 ([[WT:EDIT|Assisted]]) <垢#29331518>

--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -28,7 +28,7 @@
 # [[grime]]
 
 ====Readings====
-* {{ja-readings|kanon=[[こう]] ([[kō]])|goon=[[く]] ([[ku]])|on=[[きく]] ([[kiku]])|kun=[[あか]] ([[aka]]), [[はじ]] ([[haji]])}}
+* {{ja-readings|goon=[[く]] (ku)|kanon=[[こう]] (kō)|on=[[きく]] (kiku)|kun=[[あか]] (aka), [[はじ]] (haji)}}
 
 ====Compounds====
 * {{ja-r|頭垢|ふけ}}
