--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -62,11 +62,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''垢''' ([[cấu]], [[cáu]])
+{{vi-hantu|[[cấu]], [[cáu]]|rs=土06}}
 
 # {{defn|lang=vi}}
-
-[[Category:Vietnamese Han tu]]
 
 [[fr:垢]]
 [[it:垢]]
