edit section 2.1 ([[WT:EDIT|Assisted]]) <圾#29331548>

--- a/en/圾/圾.12993.wikitext
+++ b/en/圾/圾.12993.wikitext
@@ -15,7 +15,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=saap3}}
+{{yue-hanzi|jyut=[[kap1]], [[saap3]]|y=kap1, saap3}}
 
 # {{defn|lang=yue|sort=土04}}
 
