--- a/en/垃/垃.13062.wikitext
+++ b/en/垃/垃.13062.wikitext
@@ -46,11 +46,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''垃''' ([[lạp]], [[lắp]], [[lấp]], [[lớp]], [[rập]], [[lọp]])
+{{vi-hantu|[[lạp]], [[lắp]], [[lấp]], [[lớp]], [[rập]], [[lọp]]|rs=土05}}
 
 # {{defn|lang=vi}}
-
-[[Category:Vietnamese Han tu]]
 
 [[fr:垃]]
 [[hu:垃]]
