edit section 3.1.1 ([[WT:EDIT|Assisted]]) <既#29332115>

--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -46,7 +46,7 @@ Note the stroke order in the right component 旡, which may not be clear in the 
 # {{defn|lang=ja|sort=无05}}
 
 ====Readings====
-* {{ja-readings|on=[[き]] (ki)|kun=[[つきる]] (tsukiru), [[すでに]] (sudeni)}}
+* {{ja-readings|goon=[[け]] (ke)|kanon=[[き]] (ki)|kun=[[つきる]] (tsukiru), [[すでに]] (sudeni)}}
 
 ----
 
