t+mi:[[ānau]] ([[WT:EDIT|Assisted]]) <curve#29443011>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -88,6 +88,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Latvian: {{t|lv|līkums|m}}
 * Lithuanian: {{t|lt|linkis|m}}, {{t|lt|vingis|m}}
 * Macedonian: {{t|mk|свиок|m|tr=svíok|sc=Cyrl}}
+* Maori: {{t|mi|ānau}}
 * Persian: {{t+|fa|پیچ|tr=pič|sc=fa-Arab}}
 * Polish: {{t+|pl|zakręt|m}}
 * Portuguese: {{t+|pt|curva}}
@@ -102,6 +103,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 
 {{trans-top|curved line}}
 * German: {{t+|de|Kurve|f}}
+* Maori: {{t|mi|ānau}}
 * Persian: {{t+|fa|منحنی|tr=monhani|sc=fa-Arab}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|curva|f}}
