--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -80,7 +80,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Lithuanian: {{t|lt|plūduriuoti|impf}}, {{t+|lt|plaukti|impf}}
 * Maori: {{t|mi|mānu}}
 * Portuguese: {{t+|pt|boiar}}, {{t+|pt|flutuar}}
-* Quechua: {{t|qu|tuytuy}}
+* Quechua: {{t|qu|tuytuy}}, {{t|qu|wamp'uy}}
 * Romanian: {{t+|ro|pluti}}
 * Romansch: {{t|rm|flottar}}
 * Russian: {{t+|ru|плавать|impf}}, {{t+|ru|всплывать|pf}}, {{t+|ru|всплыть|impf}} {{i|to reach the surface}}
