Fixed typo <flesh#29480068>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -1,266 +1,4 @@
-==English==
-{{wikipedia}}
-
-===Etymology===
-From {{etyl|enm|en}} {{term|flesh|lang=enm}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*flaiską}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*pleh₁ḱ-||to tear, peel off}}. Compare German {{term|Fleisch|lang=de}}, Low German {{term|Fleesch|lang=nds}}, West Frisian {{term|fleis|lang=fy}}, Dutch {{term|vlees|lang=nl}}, Danish {{term|flæsk|lang=da}}, Icelandic {{term|flesk|lang=is}}.
-
-===Pronunciation===
-* {{IPA|/flɛʃ/|lang=en}}
-* {{audio|en-us-flesh.ogg|Audio (US)|lang=en}}
-* {{rhymes|ɛʃ|lang=en}}
-
-===Noun===
-{{en-noun|-}}
-
-#The soft [[tissue]] of the [[body]], especially [[muscle]] and [[fat]].
-#*'''1918''', Fannie Farmer, ''[[s:Boston Cooking-School Cook Book/Chapter 17|Boston Cooking-School Cook Book]]'', Chapter XVII: Poultry and Game:
-#*:The '''flesh''' of chicken, fowl, and turkey has much shorter fibre than that of ruminating animals, and is not intermingled with fat,—the fat always being found in layers directly under the skin, and surrounding the intestines.
-#The skin of a human or animal.
-#{{context|by extension|lang=en}} Bare arms, bare legs, bare torso.
-#{{context|archaic|lang=en}} [[animal|Animal]] tissue regarded as food; [[meat]].
-#*{{RQ:Mlry MrtDrthr|17.2|2|XV|ij}}:
-#*:Thenne syr launcelot sayd / fader what shalle I do / Now sayd the good man / I requyre yow take this hayre that was this holy mans and putte it nexte thy skynne / and it shalle preuaylle the gretely / syr and I wille doo hit sayd sir launcelot / Also I charge you that ye ete no '''flesshe''' as longe as ye be in the quest of the sancgreal / nor ye shalle drynke noo wyne / and that ye here masse dayly and ye may doo hit
-<!--Prior quotr#*:I charge the that thou ete no '''fleysshe''' as longe as ye be in the Queste of Sankgreall, nother ye shall drynke no wyne-->
-#*'''c.1530s''', [[s:William Tyndale|William Tyndale]], ''[[s:Bible (Tyndale)|Tyndale Bible]]'', ''[[s:Bible (Tyndale)/Leviticus|Leviticus]]'', 7, xix-xxi,
-#*:The '''flesh''' that twycheth any vnclene thinge shall not be eaten. but burnt with fire:and all that be clene in their flesh, maye eate '''flesh'''.
-#*:Yf any soule eate of the '''flesh''' of the peaceofferynges, that pertayne vnto the Lorde and hys vnclennesse yet apon him, the same soule shall perisshe from amonge his peoole{{sic}}. &para; Moreouer yf a soule twych any vnclene thinge, whether it be the vnclennesse of man or of any vnclene beest or any abhominacion that is vnclene: ad the eate of the '''flesh''' of the peaceoffrynges whiche pertayne vnto the Lord, that soule shall perissh from his people.
-#The [[human]] body as a physical entity.
-#*'''c.1530s''', [[s:William Tyndale|William Tyndale]], ''[[s:Bible (Tyndale)|Tyndale Bible]]'', ''[[s:Bible (Tyndale)/Leviticus|Leviticus]]'', 6, x,
-#*:And the preast shall put on his lynen albe and his lynen breches apon his '''flesh''', and take awaye the asshes whiche the fire of the burntsacrifice in the altare hath made, and put them besyde the alter,
-#{{context|religion|lang=en}} The [[mortal]] body of a human being, contrasted with the [[spirit]] or [[soul]].
-#*'''1769''', ''[[s:Bible (King James)|King James Bible]]'', Oxford Standard text, ''[[s:Bible (King James)/Galatians|Galatians]]'', 5, xvii,
-#*:For the '''flesh''' lusteth against the Spirit, and the Spirit against the '''flesh''': and these are contrary the one to the other: so that ye cannot do the things that ye would.
-#*'''1929''' January, Bassett Morgan ([[s:Author:Grace Jones|Grace Jones]]), ''[[s:Avon Fantasy Reader/Issue 10/Bimini|Bimini]]'', first published in ''{{w|Weird Tales}}'', reprinted 1949, in ''[[s:Avon Fantasy Reader/Issue 10|Avon Fantasy Reader, Issue 10]]'',
-#*:But death had no gift for me, no power to free me from '''flesh'''.
-#{{context|religion|lang=en}} The [[evil]] and corrupting principle working in man.
-#The soft, often edible, parts of [[fruit]]s or [[vegetable]]s.
-#*'''2003''', Diana Beresford-Kroeger, ''Arboretum America: A Philosophy of the Forest'', [http://books.google.com/books?id=7HgjzLERa1kC&pg=PA80&dq=flesh+walnut&hl=en&ei=45EyTpb4A4_qmAX9k73wCg&sa=X&oi=book_result&ct=result&resnum=3&ved=0CDgQ6AEwAg#v=onepage&q=flesh%20walnut&f=false page 81],
-#*:The '''flesh''' of black walnuts was a protein-packed winter food carefully hoarded in tall, stilted buildings.
-#{{context|obsolete|lang=en}} Tenderness of feeling; gentleness.
-#*Cowper
-#*:There is no '''flesh''' in man's obdurate heart.
-#{{context|obsolete|lang=en}} Kindred; stock; race.
-#*Bible, Genesis xxxvii. 27
-#*:He is our brother and our '''flesh'''.
-#A [[yellow]]ish [[pink]] [[colour]]; the colour of some [[Caucasian]] human skin.
-#:{{color panel|FFC090}}
-
-====Synonyms====
-* See also [[Wikisaurus:body]]
-
-====Translations====
-{{trans-top|body tissue}}
-* Albanian: {{t|sq|mish|m}}, {{t|sq|tul|m}}
-* Arabic: {{t|ar|لحم|m|tr=laḥm|sc=Arab}}
-*: Egyptian Arabic: {{t|arz|لحم|m|tr=laḥm|sc=Arab}}
-* Armenian: {{t+|hy|միս|tr=mis}}
-* Bulgarian: {{t+|bg|месо|n|sc=Cyrl}}
-* Catalan: {{t+|ca|carn|f}}
-* Czech: {{t+|cs|maso|n}}
-* Danish: {{t+|da|kød}}
-* Dutch: {{t+|nl|vlees|n}}
-* Finnish: {{t+|fi|liha}}
-* French: {{t+|fr|viande}}
-* German: {{t+|de|Fleisch|n}}
-* Greek: {{t+|el|σάρκα|f|tr=sárka|sc=Grek}}
-* Hungarian: {{t+|hu|hús}}
-* Ido: {{t+|io|karno}}
-* Irish: {{t+|ga|feoil|f}}
-* Italian: {{t+|it|carne}}
-* Latgalian: {{t|ltg|mīsa|f}}
-{{trans-mid}}
-* Latvian: {{t|lv|miesa|f}}, {{t|lv|ķermenis|m}}
-* Lithuanian: {{t+|lt|kūnas}}
-* Maori: {{t|mi|kiko}}, {{t|mi|tōrōpuku}}
-* Navajo: {{t|nv|atsįʼ}}
-* Polish: {{t+|pl|ciało|n}}, {{t+|pl|mięso|n}}
-* Portuguese: {{t+|pt|carne|f}}
-* Romanian: {{t+|ro|carne|f}}
-* Russian: мягкая [[ткань]] {{g|f}}, [[плоть]] {{g|f}} {{qualifier|poetic}}, [[мясо]] {{g|n}} {{qualifier|colloquial}}
-* Scottish Gaelic: {{t|gd|feòil|f}}
-* Spanish: {{t+|es|carne|f}}
-* Swahili: {{t+|sw|chembechembe}}
-* Swedish: {{t+|sv|kött|n}}
-* Telugu: {{t+|te|కండ|tr=kanDa}}
-* Tok Pisin: {{t|tpi|mit}}
-* Volapük: {{t+|vo|mid}}
-* Walloon: {{t+|wa|tchå|f}}
-* Welsh: {{t+|cy|cnawd}}
-* Zulu: {{t|zu|inyama|c9|c10}}
-{{trans-bottom}}
-
-{{trans-top|animal tissue as food}}
-* Armenian: {{t+|hy|միս|tr=mis}}
-* Bulgarian: {{t+|bg|месо|n|sc=Cyrl}}
-* Catalan: {{t+|ca|carn|f}}
-* Danish: {{t+|da|kød}}
-* Dutch: {{t+|nl|vlees|n}}
-* Finnish: {{t+|fi|liha}}
-* French: {{t+|fr|chair|f}}
-* German: {{t+|de|Fleisch|n}}
-* Greek: {{t+|el|κρέας|n|tr=kréas|sc=Grek}}
-* Hungarian: {{t+|hu|hús}}
-* Irish: {{t+|ga|feoil|f}}
-{{trans-mid}}
-* Latvian: {{t|lv|miesa|f}}
-* Pashto: {{t+|ps|غوښه|f|tr=γwəxa|sc=ps-Arab}}
-* Portuguese: {{t+|pt|carne|f}}
-* Russian: {{t+|ru|мясо|n}}, {{t+|ru|плоть|f}}
-* Scottish Gaelic: {{t|gd|feòil|f}}
-* Spanish: {{t+|es|carne|f}}
-* Swahili: {{t+|sw|kinofu}}
-* Swedish: {{t+|sv|kött|n}}
-* Tok Pisin: {{t|tpi|mit}}
-* Walloon: {{t+|wa|tchå|f}}
-* Zulu: {{t|zu|inyama|c9|c10}}
-{{trans-bottom}}
-
-{{trans-top|human body entity}}
-* Armenian: {{t|hy|մարմին|tr=marmin}}
-* Bulgarian: {{t+|bg|тяло|n|sc=Cyrl}}
-* Danish: {{t+|da|krop}}
-* French: {{t+|fr|corps}}
-* German: {{t+|de|Fleisch|n}}, {{t+|de|Leib|m}}
-* Greek: {{t+|el|σάρκα|f|tr=sárka|sc=Grek}}
-* Ido: {{t+|io|korpo}}
-{{trans-mid}}
-* Latvian: {{t|lv|ķermenis|m}}
-* Portuguese: {{t+|pt|corpo|m}}
-* Scottish Gaelic: {{t|gd|feòil|f}}, {{t|gd|craiceann|m}}
-* Spanish: {{t+|es|carne|f}}
-* Swahili: {{t+|sw|ngozi}}
-* Tok Pisin: {{t|tpi|mit}}
-{{trans-bottom}}
-
-{{trans-top|skin}}
-* Danish: {{t+|da|hud}}
-* Dutch: {{t+|nl|vel|n}}
-* French: {{t+|fr|peau}}
-* German: {{t+|de|Haut|n}}
-* Greek: {{t+|el|δέρμα|n|tr=dérma|sc=Grek}}
-* Portuguese: {{t+|pt|pele|f}}
-{{trans-mid}}
-* Scottish Gaelic: {{t|gd|craiceann|m}}
-* Spanish: {{t+|es|pellejo|m}}
-* Swahili: {{t+|sw|ngozi}}
-* Tok Pisin: {{t|tpi|skin}}
-* Volapük: {{t+|vo|skin}}
-{{trans-bottom}}
-
-{{trans-top|edible part of fruit/vegetable}}
-* Czech: {{t|cs|dužina|f}}
-* Danish: {{t+|da|kød}}, {{t|da|frugtkød}}
-* Dutch: {{t+|nl|vruchtvlees|n}}
-* Finnish: {{t+|fi|malto}}, {{t+|fi|hedelmäliha}}
-* French: {{t+|fr|pulpe}}
-* German: {{t+|de|Fleisch|n}}, {{t+|de|Fruchtfleisch|n}}
-* Greek: {{t+|el|σάρκα|f|tr=sárka|sc=Grek}}
-* Ido: {{t+|io|pulpo}}
-{{trans-mid}}
-* Polish: {{t+|pl|miąższ|m}}
-* Portuguese: {{t+|pt|polpa|f}}
-* Russian: {{t+|ru|мякоть|f}}
-* Scottish Gaelic: {{t|gd|feòil|f}}
-* Spanish: {{t+|es|carne|f}}
-* Swahili: {{t+|sw|ngozi}}
-* Telugu: {{t+|te|గుజ్జు|tr=gujju}}
-* Volapük: {{t|vo|flukapulp}}, {{t|vo|pulp}}
-{{trans-bottom}}
-
-{{trans-top|colour}}
-* Bulgarian: {{t+|bg|телесен|sc=Cyrl}}
-* Catalan: {{t+|ca|carn|f}}
-* Danish: {{t|da|kødfarve}}
-* Dutch: {{t|nl|mensenkleur|f}}
-{{trans-mid}}
-* French: {{t+|fr|carnation|f}}, {{t+|fr|chair|f}}
-* German: {{t|de|Fleischfarbe|f}}
-* Japanese: {{t|ja|肌色|tr=hadairo|sc=Jpan}}
-* Korean: {{t|ko|살색|sc=Kore}}
-* Russian: [[телесный]] ''adj.''
-{{trans-bottom}}
-
-{{checktrans-top}}
-<!--Remove this section once all of the translations below have been moved into the tables above.-->
-* {{ttbc|fa}}: [[گوشت]] (gusht) (1), [[پوست]] (pust) (2,4,5)
-{{checktrans-bottom}}
-
-===Verb===
-{{en-verb|fleshes|fleshing|fleshed|fleshed}}
-
-# {{context|transitive|lang=en}} To [[bury]] (something, especially a weapon) in flesh.
-#* '''1933''', Robert E. Howard, ''The Scarlet Citadel''
-#*: Give me a clean sword and a clean foe to '''flesh''' it in.
-# {{context|obsolete|lang=en}} To [[inure]] or [[habituate]] someone {{term|in}} or {{term|to}} a given practice. {{defdate|16th-18th c.}}
-#*{{RQ:Flr Mntgn Essays}}, II.7:
-#*: And whosoever could now joyne us together, and eagerly '''flesh''' all our people to a common enterprise, we should make our ancient military name and chivalrous credit to flourish againe.
-# To put flesh on; to [[fatten]].
-# To add details.
-#: ''The writer had to go back and '''flesh''' out the climactic scene.''
-# To remove the flesh from the skin during the making of [[leather]].
-
-====Translations====
-{{trans-top|to put flesh on}}
-* Danish: {{t|da|opfede}}
-* Dutch: {{t+|nl|vervetten}}
-* German: {{t+|de|zunehmen}}
-{{trans-mid}}
-* Persian: [[پرواربندی]] (parvaarbandi)
-* Portuguese: {{t+|pt|engordar}}
-* Swahili: {{t+|sw|ngozi}}
-{{trans-bottom}}
-
-{{trans-top|To add details}}
-* German: {{t+|de|ausarbeiten}}, {{t+|de|untermauern}}
-* Portuguese: {{t+|pt|enfeitar}}
-{{trans-mid}}
-* Swahili: {{t|sw|jazia}}
-{{trans-bottom}}
-
-{{trans-top|to remove the flesh}}
-* German: {{t|de|entfleischen}}
-* Portuguese: {{t|pt|descarnar}}
-{{trans-mid}}
-* Swahili: {{t|sw|bambua}}
-{{trans-bottom}}
-
-===Derived terms===
-{{rel-top3|Terms derived from the noun or verb ''flesh''}}
-* [[exchange flesh]]
-* [[flesh and blood]]
-* [[flesh fly]]
-* [[flesh out]]
-* [[flesh side]]
-* [[flesh-wing]]
-{{rel-mid3}}
-* [[flesh wound]]
-* [[flesher]]
-* [[fleshing]]
-* [[fleshpot]]
-* [[fleshy]]
-* [[goose flesh]]
-{{rel-mid3}}
-* [[in the flesh]]
-* [[one flesh]]
-* [[pound of flesh]]
-* [[press the flesh]]
-* [[proud flesh]]
-* [[way of all flesh]]
-{{rel-bottom}}
-
-===See also===
-* [[carrion]]
-* [[incarnate]]
-* [[sarcoid]]
-* [[Appendix:Colors]]
-
-===Anagrams===
-* [[shelf#English|shelf]]
-
-[[Category:en:Colors]]
-[[Category:en:Oranges]]
-
-----
+Happy
 
 ==Middle English==
 
