--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -145,6 +145,7 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 * Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
 * Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
 {{trans-mid}}
+* Maore Comorian: {{t|swb|Israila}}
 * Romanian: {{t+|ro|Israel|m}}
 * Spanish: {{t+|es|Israel|m}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
