--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -17,91 +17,92 @@
 
 ====Translations====
 {{trans-top|country in Central Europe}}
-* Afrikaans: {{t|af|Tsjeggiese Republiek}}, {{t|af|Tsjeggië}}
-* Arabic: {{t|ar|جمهورية التشيك|f|tr=jumhūriyyat al-tšik|sc=Arab}}, {{t|ar|التشيك|m|tr=al-tšīk, al-tšek|sc=Arab}}
-* Armenian: {{t|hy|Չեխիայի Հանրապետություն|sc=Armn}}, {{t|hy|Չեխիա|sc=Armn}}
-* Azeri: {{t|az|Çex Respublikası}}, {{t+|az|Çexiya}}
-* Belarusian: {{t|be|Чэ́шская рэспу́бліка|f|sc=Cyrl}}, {{t|be|Чэ́хія|f|sc=Cyrl}}
+* Afrikaans: {{t|af|Tsjeggiese Republiek}}
+* Albanian: {{t|sq|Republika Çeke}}
+* Arabic: {{t|ar|جمهورية التشيك|f|tr=jumhūriyyat al-tšik|sc=Arab}}
+* Armenian: {{t|hy|Չեխիայի Հանրապետություն|sc=Armn}}
+* Azeri: {{t|az|Çex Respublikası}}
+* Belarusian: {{t|be|Чэ́шская рэспу́бліка|f|sc=Cyrl}}
 * Bengali: {{t|bn|চেক প্রজাতন্ত্র|tr=cek prôjatôntrô|sc=Beng}}
 * Breton: {{t|br|Republik Tchek}}
-* Bulgarian: {{t|bg|Че́шка репу́блика|f|sc=Cyrl}}, {{t+|bg|Че́хия|f|sc=Cyrl}}
-* Burmese: {{t|my|ချက်သမ္မတနိုင်ငံ|sc=Mymr}}, {{t|my|ခ္ယက္|sc=Mymr}}
+* Bulgarian: {{t|bg|Че́шка репу́блика|f|sc=Cyrl}}
+* Burmese: {{t|my|ချက်သမ္မတနိုင်ငံ|sc=Mymr}}
 * Catalan: {{t|ca|República Txeca|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|捷克共和國|sc=Hani}}, {{t|cmn|捷克共和国|tr=Jiékè gònghéguó|sc=Hani}}, {{t+|cmn|捷克|tr=Jiékè|sc=Hani}}
+*: Mandarin: {{t+|cmn|捷克共和國|sc=Hani}}, {{t|cmn|捷克共和国|tr=Jiékè gònghéguó|sc=Hani}}
 * Chuvash: {{t|cv|Чех Республики|sc=Cyrl}}
 * Crimean Tatar: {{t|crh|Çeh Cumhuriyeti}}
-* Czech: {{t+|cs|Česká republika|f}}, {{t+|cs|Česko|n}}
-* Danish: {{t+|da|Den Tjekkiske Republik}}, {{t+|da|Tjekkiet}}
-* Dutch: {{t+|nl|Tsjechische Republiek}}, {{t+|nl|Tsjechië|n}}
+* Czech: {{t+|cs|Česká republika|f}}
+* Danish: {{t+|da|Den Tjekkiske Republik}}
+* Dutch: {{t+|nl|Tsjechische Republiek}}
 * Esperanto: {{t|eo|Ĉeĥa Respubliko}}
-* Estonian: {{t|et|Tšehhi Vabariik}}, {{t+|et|Tšehhi}}, rarely {{t|et|Tšehhimaa}}
+* Estonian: {{t|et|Tšehhi Vabariik}}
 * Faroese: {{t|fo|Kekska lýðveldið|n}}
 * Finnish: {{t+|fi|Tšekin tasavalta}}
-* French: {{t+|fr|République tchèque|f}}, {{t+|fr|Tchéquie|f}}
-* German: {{t+|de|Tschechische Republik|f}}, {{t+|de|Tschechien|n}}, rarely {{t+|de|Tschechei|f}}
-* Greek: {{t|el|Δημοκρατία της Τσεχίας|f|sc=Grek}}, {{t+|el|Τσεχία|f|sc=Grek}}
+* French: {{t+|fr|République tchèque|f}}
+* German: {{t+|de|Tschechische Republik|f}}
+* Greek: {{t|el|Δημοκρατία της Τσεχίας|f|sc=Grek}}
 * Haitian Creole: {{t|ht|Repiblik Tcheki}}
 * Hebrew: {{t|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit|sc=Hebr}}
 * Hindi: {{t|hi|चेक रिपब्लिक|tr=cek ripablik|sc=Deva}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}
-* Icelandic: {{t|is|Tékkneska lýðveldið|n}}, {{t+|is|Tékkland|n}}
+* Icelandic: {{t|is|Tékkneska lýðveldið|n}}
 * Interlingua: {{t|ia|Republica Chec}}
-* Irish: {{t|ga|Poblacht na Seice|f}}, {{t|ga|Seic|f|alt=an tSeic}}
+* Irish: {{t|ga|Poblacht na Seice|f}}
 * Italian: {{t+|it|Repubblica Ceca|f}}
-* Japanese: {{t|ja|チェコ共和国|tr=ちぇこきょうわこく, Cheko kyōwakoku}}, {{t+|ja|チェコ|tr=Cheko}}
+* Japanese: {{t|ja|チェコ共和国|tr=ちぇこきょうわこく, Cheko kyōwakoku}}
 * Jèrriais: {{t|roa-jer|Républyique Tchèque|f}}
-* Kazakh: {{t|kk|Чех Республикасы|sc=Cyrl}}, {{t|kk|Чехия|sc=Cyrl}}
+* Kazakh: {{t|kk|Чех Республикасы|sc=Cyrl}}
 * Khmer: {{t|km|សាធារណរដ្ឋឆែក|tr=sar thea rak nak roath chaek|sc=Khmr}}
-* Korean: {{t|ko|^체코 공화국|sc=Hang}}, {{t+|ko|^체코|sc=Hang}}
+* Korean: {{t|ko|^체코 공화국|sc=Hang}}
 * Kurdish: {{t|ku|Komara Çêkiyayê}}
-* Kyrgyz: {{t|ky|Чех Республикасы|sc=Cyrl}}, {{t|ky|Чехия|sc=Cyrl}}
-* Lao: {{t|lo|ສາທາລະນະລັດແຊັກ|sc=Laoo}}, {{t|lo|ເຊັກກີ|sc=Laoo}}
+* Kyrgyz: {{t|ky|Чех Республикасы|sc=Cyrl}}
+* Lao: {{t|lo|ສາທາລະນະລັດແຊັກ|sc=Laoo}}
 {{trans-mid}}
 * Latin: {{t|la|Respublica Cecha|f}}
-* Latvian: {{t|lv|Čehijas Republika|f}}, {{t+|lv|Čehija|f}}
-* Lithuanian: {{t+|lt|Čekijos Respublika|f}}, {{t+|lt|Čekija|f}}
+* Latvian: {{t|lv|Čehijas Republika|f}}
+* Lithuanian: {{t+|lt|Čekijos Respublika|f}}
 * Luxembourgish: {{t+|lb|Tschechesch Republik}}
-* Macedonian: {{t|mk|Че́шка Репу́блика|f|sc=Cyrl}}, {{t+|mk|Че́шка|f|sc=Cyrl}}, rarely {{t|mk|Че́хија|f|sc=Cyrl}}
+* Macedonian: {{t|mk|Че́шка Репу́блика|f|sc=Cyrl}}
 * Malay: {{t|ms|Republik Czech}}
 * Maltese: {{t|mt|Repubblika Ċeka|alt=ir-Repubblika Ċeka}}
 * Navajo: {{t|nv|Chek bikéyah}}
-* Norwegian: {{t|no|Den tsjekkiske republikk}}, {{t+|no|Tsjekkia}}
+* Norwegian: {{t|no|Den tsjekkiske republikk}}
 * Occitan: {{t+|oc|Republica Chèca|f}}
-* Persian: {{t+|fa|جمهوری چک|tr=jomhuri-ye ček|sc=fa-Arab}}, {{t+|fa|چک|tr=ček|sc=fa-Arab}}
+* Persian: {{t+|fa|جمهوری چک|tr=jomhuri-ye ček|sc=fa-Arab}}
 * Polish: {{t+|pl|Republika Czeska|f}}
 * Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}
-* Portuguese: {{t+|pt|República Tcheca}}, {{t+|pt|Chéquia|f}}, {{t+|pt|Tchéquia|f}}
+* Portuguese: {{t+|pt|República Tcheca}}, {{t+|pt|República Checa}}
 * Quechua: {{t|qu|Chiksuyu}}
 * Romanian: {{t+|ro|Republica Cehă|f}}
 * Romansch: {{t|rm|Republica Tscheca|f}} 
-* Russian: {{t|ru|Че́шская Респу́блика|f|sc=Cyrl}}, {{t+|ru|Че́хия|f|sc=Cyrl}}
+* Russian: {{t|ru|Че́шская Респу́блика|f|sc=Cyrl}}
 * Scottish Gaelic: an t-{{t|gd|Seic|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|Чешка Република|f|sc=Cyrl}}, {{t|sh|Чешка|f|sc=Cyrl}}
-*: Roman: {{t|sh|Češka Republika|f}}, {{t+|sh|Češka|f}}
+*: Cyrillic: {{t|sh|Чешка Република|f|sc=Cyrl}}
+*: Roman: {{t|sh|Češka Republika|f}}
 * Sicilian: {{t|scn|Ripùbblica Ceca|f}}
-* Silesian: {{t|szl|Czesko Republika|f}}, (''colloquial'') 
-* Sinhalese: {{t|si|චෙක් ජනරජය|sc=Sinh}}, {{t|si|චෙක්|sc=Sinh}}
-* Slovak: {{t|sk|Česká republika|f}}, {{t|sk|Česko|n}}
-* Slovene: {{t|sl|Čéška Repúblika|f}}, {{t|sl|Čéška|f}}
+* Silesian: {{t|szl|Czesko Republika|f}}
+* Sinhalese: {{t|si|චෙක් ජනරජය|sc=Sinh}}
+* Slovak: {{t|sk|Česká republika|f}}
+* Slovene: {{t|sl|Čéška Repúblika|f}}
 * Spanish: {{t+|es|República Checa|f}}
 * Swahili: {{t|sw|Jamhuri ya Ucheki}}
-* Swedish: {{t|sv|Tjeckiska republiken}}, {{t+|sv|Tjeckien}}
+* Swedish: {{t|sv|Tjeckiska republiken}}
 * Tagalog: {{t+|tl|Republikang Tseko}}
-* Tajik: {{t|tg|Чех Ҷумҳурии|sc=Cyrl}}, {{t|tg|Чехия|sc=Cyrl}}
-* Tatar: {{t|tt|Чехия Җөмһүрият|sc=Cyrl}}, {{t|tt|Чехия|sc=Cyrl}}
+* Tajik: {{t|tg|Чех Ҷумҳурии|sc=Cyrl}}
+* Tatar: {{t|tt|Чехия Җөмһүрият|sc=Cyrl}}
 * Thai: {{t+|th|สาธารณรัฐเช็ก|tr=săa-taa-rá-ná-rát chék|sc=Thai}}
-* Turkish: {{t+|tr|Çek Cumhuriyeti}}, {{t|tr|Çekya}}
-* Turkmen: {{t|tk|Çeh Republikasy}}, {{t|tk|Çehiýa}}
-* Ukrainian: {{t|uk|Че́ська Респу́бліка|f|sc=Cyrl}}, {{t+|uk|Че́хія|f|sc=Cyrl}}
+* Turkish: {{t+|tr|Çek Cumhuriyeti}}
+* Turkmen: {{t|tk|Çeh Republikasy}}
+* Ukrainian: {{t|uk|Че́ська Респу́бліка|f|sc=Cyrl}}
 * Uyghur: {{t|ug|چېخ جۇمھۇرىيەتى|sc=ug-Arab}}
-* Uzbek: {{t|uz|Chex Respublikasi}}, {{t+|uz|Chexiya}}
+* Uzbek: {{t|uz|Chex Respublikasi}},
 * Vietnamese: {{t|vi|Cộng hòa Séc}}
 * Võro: {{t|vro|Tsehhi Vabariik'}}
 * Welsh: {{t|cy|Y Weriniaeth Tsiec}}
 * Yakut: {{t|sah|Чех Республиката|sc=Cyrl}}
-* Yiddish: {{t|yi|טשעכישע רעפּובליק|f}}, {{t|yi|טשעכײַ|f|sc=Hebr}}
+* Yiddish: {{t|yi|טשעכישע רעפּובליק|f}},
 {{trans-bottom}}
 
 ====See also====
