--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -333,9 +333,28 @@
 # {{context|slang|lang=en}} A [[cigarette]], particularly one containing [[tobacco]] instead of [[marijuana]]. Also [[straighter#Noun|straighter]]. {{defdate|from 20th c.}}
 #* ['''1923''', J[oseph] Manchon, ''Le slang : lexique de l'anglais familier et vulgaire : précédé d'une étude sur la pronunciation et la grammaire populaires'', p. 296:
 #*: A straight = a straighter = a straight cut, une cigarette en tabac de Virginie.]
+# {{context|slang|lang=en}} A [[normal]] [[person]]; someone in [[mainstream]] society.
+#* {{quote-video
+ | year    = 1989
+ | title   = [[wikipedia:Ghostbusters II|Ghostbusters II]]
+ | people  = [[wikipedia:Bill Murray|Bill Murray]]
+ | role    = [[wikipedia:Peter Venkman|Peter Venkman]]
+ | passage = Boys! Boys! You're scaring the '''straights''', okay? Is there any way that we could do this tomorrow?
+}}
+#* {{quote-book
+ | year    = 2014
+ | first   = Matthew D.
+ | last    = Tribbe
+ | title   = No Requiem for the Space Age
+ | chapter = Turning a Miracle into a Bummer
+ | isbn    = 9780199313525
+ | page    = 150
+ | passage = More importantly, ''Blows Against the Empire'' [...] more than any other work revealed the split vision towards space exploration among many in the counter-culture: a romantic vision of the freedom offered by space that had been fostered by a lifetime of science fiction consumption, immersion in a technological society, the countercultural yearning for speed and “the road,” and, thanks to LSD and other hallucinogens, a unique preappreciation of space traveling not available to '''straights''', versus the bland, oppressive vision of exploration offered by NASA, itself just one part of a larger destructive system that was devastating Earth and that could only offer further oppression in space, not liberation.
+}}
 
 ====Synonyms====
 * {{sense|heterosexual}} [[hetero]], [[breeder]]
+* {{sense|normal person}} see [[Wikisaurus:mainstreamer]]
 
 ====Translations====
 {{trans-top|part of a racecourse or running track that is not curved}}
