t+cmn:[[法郎士]] t+yue:[[法郎士]] ([[WT:EDIT|Assisted]]) <France#29601518>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -193,6 +193,9 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 {{trans-bottom}}
 
 {{trans-top|a French surname}}
+* Chinese:
+*: Cantonese: {{t|yue|法郎士|tr=faat3 long4 si6|sc=Hani}}
+*: Mandarin: {{t|cmn|法郎士|tr=Fǎlángshì|sc=Hani}}
 * French: {{t+|fr|France|m|f}}
 {{trans-mid}}
 * Russian: {{t|ru|Франс|m|f|tr=Frans}}
