--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -93,11 +93,12 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Latgalian: {{t|ltg|pārkiuņs}}
 * Latin: {{t|la|tonus|m}}, {{t|la|tonitrus|m}}, {{t|la|tonitruum|n}}
 * Latvian: {{t|lv|pērkons|m}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|griaustinis}}
+{{trans-mid}}
 * Macedonian: {{t+|mk|гром|m|tr=grom}}
 * Malay: {{t|ms|guruh}}, {{t|ms|guntur}}
 * Manx: {{t|gv|taarnagh}}
+* Maore Comorian: {{t|swb|guguma}}
 * Maori: {{t|mi|whaitiri}}
 * Mongolian: {{t+|mn|аянга|sc=Cyrl}}
 * Navajo: {{t|nv|iiʼniʼ}}
