--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -290,7 +290,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 {{trans-top|lower than normal rate}}
 * Danish: {{t|da|nedsættelse|c}}
 * Finnish: {{t|fi|leikattu}}, {{t|fi|alennettu}}
-* French: {{t+|fr|baissé}}, {{t+|fr|diminué}}
+* French: {{t+|fr|baisse|f}}, {{t+|fr|diminution|f}}
 {{trans-mid}}
 * Italian: {{t+|it|riduzione|f}}, {{t|it|sgravio|m}}
 * Portuguese: {{t+|pt|redução|m}}
