See also, + 1 <port#29774738>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -1,4 +1,4 @@
-{{also|port|Port|port.|Port.|pórt}}
+{{also|port|Port|port.|Port.|pórt|PORT}}
 ==English==
 {{wikipedia|dab=Port (disambiguation)|Port}}
 
