t+bg:[[основавам]] t+bg:[[учредявам]] t+bg:[[създавам]] ([[WT:EDIT|Assisted]]) <found#29794097>

--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -65,6 +65,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 =====Translations=====
 {{trans-top|to begin building}}
 * Armenian: {{t|hy|հիմքը դնել|tr=himkʿë dnel}}, {{t|hy|հիմքը գցել|tr=himk’ë gc’el}}
+* Bulgarian: {{t+|bg|основавам|sc=Cyrl}}
 * Czech: {{t+|cs|založit}}
 * Danish: {{t+|da|grundlægge}}
 * French: {{t+|fr|fonder}}
@@ -89,6 +90,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 
 {{trans-top|to start organization}}
 * Armenian: {{t|hy|հիմնադրել|tr=himnadrel}}, {{t|hy|ստեղծել|tr=steġçel}}, {{t|hy|հիմնել|tr=himnel}}
+* Bulgarian: {{t+|bg|учредявам|sc=Cyrl}}, {{t+|bg|създавам|sc=Cyrl}}
 * Catalan: {{t+|ca|fundar}}
 * Czech: {{t+|cs|založit}}
 * Danish: {{t+|da|grundlægge}}
