converted "Mandarin" section into unified "Chinese" section; added "c=" (Cantonese) reading to /zh-pron/ template; added "References" section and one link; updated first definition to "(variant of 是) to be, is, am, are" <昰#29794177>

--- a/en/昰/昰.16984.wikitext
+++ b/en/昰/昰.16984.wikitext
@@ -4,11 +4,30 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日一卜一 (AMYM)}}
 
-# var of 'to [[be]]', '[[summer]]'
+# (variant of [[是]]) to [[be]], [[is]], [[am]], [[are]]
+# [[summer]]
 # [[name]]
 
 ====References====
 * {{Han ref|kx=0494.010|dkj=13860|dj=0858.070|hdz=21497.040|uh=6630|ud=26160}}
+
+----
+
+==Chinese==
+{{zh-hanzi-box|[[昰]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=shì
+|c=si6,haa6
+|mc=
+|oc=
+|ma=
+|cat=v,pn
+}}
+
+====References====
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
 
 ----
 
@@ -30,15 +49,6 @@
 {{ko-hanja|hangeul=[[하]], [[시]]|eumhun=|rv=ha, si|mr=ha, si|y=ha, si}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[shì]] ([[shi4]])|wg=shih<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 [[fr:昰]]
 [[hu:昰]]
