Reverted edits by [[Special:Contributions/Viethoc|Viethoc]]. If you think this rollback is in error, please leave a message on my talk page. <慈#29883536>

--- a/en/慈/慈.15707.wikitext
+++ b/en/慈/慈.15707.wikitext
@@ -52,15 +52,10 @@
 
 ==Vietnamese==
 
-===Hán tự===
+===Han character===
 {{vi-hantu|[[từ]]|rs=心10}}
 
-# Lành, yêu rất mực. Cha mẹ yêu con gọi là từ.
-# Người trên yêu kẻ dưới cũng gọi là từ. Chu cấp cứu giúp cho kẻ túng thiếu khốn cùng gọi là từ thiện sự nghiệp 慈善事業.
-# Mẹ. Cha gọi là nghiêm 嚴, mẹ gọi là từ 慈. Như gia từ 家慈, từ mẫu 慈母, vv...
-
-====References====
-* Hán Việt Tự Điển Thiều Chửu v. 3.0, http://vietnamtudien.org/thieuchuu, http://vietnamtudien.org/thieuchuu/&h61-2.htm#24904
+# {{defn|lang=vi|sort=心10}}
 
 [[fr:慈]]
 [[ko:慈]]
