--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -41,32 +41,32 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 ====Translations====
 {{trans-top|the state}}
 * Albanian: {{t|sq|Izraeli}}
-* Amharic: {{t|am|እስራኤል|tr=əsra'el|sc=Ethi}}
-* Arabic: {{t|ar|إسرائيل|m|tr='isra'íl}}
-* Armenian: {{t|hy|Իսրայել|tr=Israyel}}
+* Amharic: {{t|am|እስራኤል|sc=Ethi}}
+* Arabic: {{t|ar|إِسْرَائِيل|f}}
+* Armenian: {{t|hy|Իսրայել}}
 * Asturian: {{t+|ast|Israel}}
 * Azeri: {{t+|az|İsrail}}
-* Belarusian: {{t|be|Ізраіль|m|tr=Izráil’}}
+* Belarusian: {{t|be|Ізра́іль|m}}
 * Bengali: {{t|bn|ইসরায়েল|tr=israyel}}
 * Breton: {{t|br|Israel}}
-* Bulgarian: {{t+|bg|Израел|m|tr=Izráel}}
-* Burmese: {{t|my|အစ္စရေး|tr=iʿsẏè|sc=Mymr}}
+* Bulgarian: {{t+|bg|Изра́ел|m}}
+* Burmese: {{t|my|အစ္စရေး|sc=Mymr}}
 * Catalan: {{t+|ca|Israel|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|以色列|tr=Yǐsèliè|sc=Hani}}
 * Czech: {{t+|cs|Izrael}}
 * Danish: {{t+|da|Israel}}, {{t|da|Staten Israel}}
 * Dutch: {{t+|nl|Israël|n}}
-* Dzongkha: {{t|dz|ཨིཛ་རཱེལ་|sc=Tibt|tr=idz rael}}
+* Dzongkha: {{t|dz|ཨིཛ་རཱེལ་|sc=Tibt}}
 * Esperanto: {{t|eo|Israelo}}, {{t|eo|Izraelo}}
 * Estonian: {{t+|et|Iisrael}}
 * Faroese: {{t|fo|Ísrael|n}}
 * Finnish: {{t+|fi|Israel}}
 * French: {{t+|fr|Israël|m}}
 * Galician: {{t+|gl|Israel|m}}
-* Georgian: {{t|ka|ისრაელი|tr=israeli|sc=Geor}}
+* Georgian: {{t|ka|ისრაელი|sc=Geor}}
 * German: {{t+|de|Israel|n}}
-* Greek: {{t+|el|Ισραήλ|n|tr=Israíl|sc=Grek}}
+* Greek: {{t+|el|Ισραήλ|n|sc=Grek}}
 * Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yiśra'ēl}}
 * Hindi: {{t+|hi|इस्राइल|m|tr=isrā'il}}
 * Hungarian: {{t+|hu|Izrael}}
@@ -75,74 +75,75 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 * Interlingua: {{t|ia|Israel}}
 * Irish: {{t+|ga|Iosrael|m}}, {{t|ga|Stát Iosrael|m}}
 * Italian: {{t+|it|Israele}}
-* Japanese: {{t+|ja|イスラエル|tr=isuraeru}}
+* Japanese: {{t+|ja|イスラエル|tr=Isuraeru}}
 * Judeo-Arabic: {{t|jrb|אסראיל|tr=ʾisrāʾīl}}
 * Jèrriais: {{t|roa-jer|Israël|m}}
 * Kalenjin: {{t|kln|Israel}}
 * Kamba: {{t|kam|Israel}}
-* Kannada: {{t+|kn|ಇಸ್ರೇಲ್|tr=isrel|sc=Knda}}
-* Kazakh: {{t|kk|Израиль|tr=Ïzraïl|sc=Cyrl}}
+* Kannada: {{t+|kn|ಇಸ್ರೇಲ್|sc=Knda}}
+* Kazakh: {{t|kk|Израиль|sc=Cyrl}}
 * Khmer: {{t|km|អ៊ីស្រាអែល|tr=iisraa’ael|sc=Khmr}}
 * Kikuyu: {{t|ki|Israel}}
-* Korean: {{t+|ko|이스라엘|tr=Iseura-el|sc=Hang}}
-* Kyrgyz: {{t|ky|Израиль|tr=İzrail|sc=Cyrl}}
-* Lao: {{t|lo|ອິດສະລະແອນ|tr=itsala'ǣn|sc=Laoo}}
+* Korean: {{t+|ko|^이스라엘|sc=Hang}}
+* Kyrgyz: {{t|ky|Израиль|sc=Cyrl}}
+* Lao: {{t|lo|ອິດສະລະແອນ|sc=Laoo}}
 * Latin: {{t|la|Israel}}
 {{trans-mid}}
 * Latvian: {{t+|lv|Izraēla|f}}
 * Lithuanian: {{t+|lt|Izraelis|m}}, {{t|lt|Izraelio Valstybė|f}}
 * Livonian: {{t|liv|Izraēl}}, {{t|liv|Jūdõmō}}
 * Luo: {{t|luo|Israel}}
-* Macedonian: {{t+|mk|Израел|m|tr=Ízrael}}
+* Macedonian: {{t+|mk|И́зраел|m}}
 * Malay: {{t|ms|Israel}}
 * Maltese: {{t|mt|Iżrael}}
 * Mansoanka: {{t|msw|Israeli}}
 * Marathi: {{t|mr|इस्रायल|tr=isrāyal|sc=Deva}}, {{t|mr|इस्रायल|tr=isrāyal|sc=Deva}}
 * Meru: {{t|mer|Israel}}
-* Mongolian: {{t|mn|Израйль|tr=Izrajl'|sc=Cyrl}}
+* Mongolian: {{t|mn|Израйль|sc=Cyrl}}
 * Navajo: {{t|nv|Ízrel bikéyah}}
 * Neapolitan: {{t|nap|Isdraele}}
 * Norwegian: {{t+|no|Israel}}
-* Old Church Slavonic: {{t|cu|Їздраил҄ь|sc=Cyrs}}
-* Oriya: {{t|or|ଇସ୍ରାଏଲ|sc=Orya}}
+* Old Church Slavonic:
+*: Cyrillic: {{t|cu|Їздраил҄ь|m|sc=Cyrs}}
+* Oriya: {{t|or|ଇସ୍ରାଏଲ|tr=isrā'ēl|sc=Orya}}
 * Pashto: {{t|ps|اسرايل|sc=ps-Arab}}
-* Persian: {{t+|fa|اسرائیل|tr=Esrâ’il}}
+* Persian: {{t+|fa|اسرائیل|tr=esrâ’il}}
 * Polish: {{t+|pl|Izrael|m}}
 * Portuguese: {{t+|pt|Israel}}
 * Romanian: {{t|ro|Israel|n}}
-* Russian: {{t+|ru|Израиль|m|tr=Izráil’}}
+* Russian: {{t+|ru|Изра́иль|m}}
 * Samogitian: {{t|sgs|Izraelės|m}}, {{t|sgs|Izraele Valstībė|f}}
-* Sanskrit: {{t|sa|इस्रेल}}, {{t|sa|इस्रेल|tr=isrēla|sc=Deva}}
+* Sanskrit: {{t|sa|इस्रेल}}, {{t|sa|इस्रेल|sc=Deva}}
 * Scottish Gaelic: {{t|gd|Iosrael|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Израел|m|sc=Cyrl}}
 *: Roman: {{t+|sh|Izrael|m}}
-* Sinhalese: {{t|si|ඊශ්‍රායෙලය|tr=īśrāyelaya|sc=Sinh}}
+* Sinhalese: {{t|si|ඊශ්‍රායෙලය|sc=Sinh}}
 * Slovak: {{t|sk|Izrael}}
 * Slovene: {{t|sl|Ízrael|m}}
 * Spanish: {{t+|es|Israel|m}}
 * Swahili: {{t+|sw|Israeli}}
 * Swedish: {{t+|sv|Israel}}
 * Tagalog: {{t|tl|Israel}}
-* Tajik: {{t|tg|Исроил|tr=Isroil|sc=Cyrl}}
-* Tamil: {{t|ta|இஸ்ரேல்|tr=isrēl|sc=Taml}}
-* Tatar: {{t|tt|Исраил|tr=İsrail|sc=Cyrl}}
+* Tajik: {{t|tg|Исроил|sc=Cyrl}}
+* Tamil: {{t|ta|இஸ்ரேல்|sc=Taml}}
+* Tatar: {{t|tt|Исраил|sc=Cyrl}}
 * Thai: {{t|th|ประเทศอิสราเอล|tr=bpràtâyt ìtsàrăa-ayn}}, {{t+|th|อิสราเอล|tr=ìt-sà-răa-ayn}}
-* Tibetan: {{t|bo|ཨི་སི་ར་ཨེལ།|sc=Tibt|tr=i si ra el}}
+* Tibetan: {{t|bo|ཨི་སི་ར་ཨེལ།|sc=Tibt}}
 * Turkish: {{t+|tr|İsrail}}
 * Turkmen: {{t|tk|Izrail}}
-* Ukrainian: {{t+|uk|Ізраїль|m|tr=Izrájil’}}
+* Ukrainian: {{t+|uk|Ізра́їль|m}}
 * Urdu: {{t|ur|اسرائیل|m|tr=isrā'il}}
 * Uzbek: {{t+|uz|Isroil}}
 * Veps: {{t|vep|Izrail'}}
 * Vietnamese: {{t+|vi|Israel}}, {{t|vi|Ixraen}}
-* Yiddish: {{t|yi|ישראל|alt=ישׂראל|tr=Yisroel}}
+* Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}
 {{trans-bottom}}
 
 {{trans-top|Biblical: name given to Jacob}}
 * Catalan: {{t+|ca|Israel|m}}
 * French: {{t+|fr|Israël|m}}
-* Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
+* Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yisra'el}}
 * Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
 {{trans-mid}}
 * Maore Comorian: {{t|swb|Israila}}
@@ -153,7 +154,7 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 
 {{trans-top|given name}}
 * Catalan: {{t+|ca|Israel|m}}
-* Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
+* Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yisra'él}}
 {{trans-mid}}
 * Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
