--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -40,7 +40,7 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 
 ====Translations====
 {{trans-top|the state}}
-* Albanian: {{t|sq|Izraeli}}
+* Albanian: {{t|sq|Izrael}}
 * Amharic: {{t|am|እስራኤል|sc=Ethi}}
 * Arabic: {{t|ar|إِسْرَائِيل|f}}
 * Armenian: {{t|hy|Իսրայել}}
@@ -125,7 +125,7 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 *: Cyrillic: {{t|sh|Израел|m|sc=Cyrl}}
 *: Roman: {{t+|sh|Izrael|m}}
 * Sinhalese: {{t|si|ඊශ්‍රායෙලය|sc=Sinh}}
-* Slovak: {{t|sk|Izrael}}
+* Slovak: {{t|sk|Izrael|m}}
 * Slovene: {{t|sl|Ízrael|m}}
 * Spanish: {{t+|es|Israel|m}}
 * Swahili: {{t+|sw|Israeli}}
