/* Derived terms */ <bridge#29900814>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -69,6 +69,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * [[cross that bridge when one comes to it]]
 * [[drawbridge]]
 * [[footbridge]]
+* [[ice bridge]]
 * [[Kelvin bridge]]
 {{rel-mid}}
 * [[land bridge]]
