--- a/en/偊/偊.11098.wikitext
+++ b/en/偊/偊.11098.wikitext
@@ -25,7 +25,9 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
 
-# {{defn|lang=ja|sort=人09}}
+# ''[http://jisho.org/kanji/details/%E5%81%8A self-reliant]''
+# ''[http://jisho.org/kanji/details/%E5%81%8A to walk alone]''
+
 
 ====Readings====
 * {{ja-readings|on=[[う]] (u), [[く]] (ku)|kun=[[くぐまるさま]] (kugumarusama), [[つつしむさま]] (tsutsushimusama)}}
